--- a/xmas/style.css
+++ b/xmas/style.css
@@ -30,9 +30,9 @@ svg{
  
 }
 
-.sparkle{
-  /* mix-blend-mode:luminosity */
-}
+/* .sparkle{
+  mix-blend-mode:luminosity
+} */
 #endMessage{
   font-family: mountains_of_christmasregular;
   font-size: 2rem;
